# text-VA-recognition-fine-tuning

./: .gitignore  README.md  main.py  pyproject.toml
data/hf_cache/Mavdol___npc-valence-arousal/default/0.0.0/0fe5c12482815c10e54d1a41ac4fada242ce22bc/: cache-3314427a50aca64b.arrow  cache-c2e98efffbaed3c9.arrow  dataset_info.json
data/hf_cache/models--answerdotai--ModernBERT-base/refs/: main
data/hf_cache/models--answerdotai--ModernBERT-base/snapshots/8949b909ec900327062f0ebf497f51aef5e6f0c8/: config.json  tokenizer_config.json
src/: __init__.py  dataset_loader.py  eval_metrics.py  predict.py  predict_cli.py  train.py
