[project]
name = "text-va-recognition"
version = "0.1.0"
description = "Fine-tuning ModernBERT for valence-arousal regression."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.1",
    "datasets>=3.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "transformers>=4.57.0",
]
